added course details endpoint
