# src/api/Models/Category.js
@@ -23,5 +23,15 @@ const categorySchema = new Schema({
     default: Date.now,
   },
 });
+categorySchema.virtual("courses", {
+  ref: "Course", // The model to populate (Course)
+  localField: "_id", // Field in Category that links to Course
+  foreignField: "category", // Field in Course that links to Category
+  justOne: false, // Set to false since a category can have multiple courses
+});
+categorySchema.set("toJSON", { virtuals: true });
+categorySchema.set("toObject", { virtuals: true });
+
 const Category = model("Category", categorySchema);
+
 module.exports = Category;
